fix position of topographic toggle on mobile

--- a/src/navigation.scss
+++ b/src/navigation.scss
@@ -65,7 +65,6 @@
 }
 
 @media screen and (max-width: 800px) {
-
   #navigation {
     width: 80%;
     top: unset;
@@ -98,6 +97,12 @@
   border-radius: 25%;
   cursor: pointer;
   box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
+@media screen and (max-width: 800px) {
+  #change-map-style{
+    bottom: unset;
+    top: 20px;
+  }
 }
 .non-topographic{
   --is-non-topographic: 1;
